--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     margin: auto;
     font-family: "Questrial", sans-serif;
     font-weight: 400;
-    font-style: normal;   
+    font-style: normal;
 }
 
 header{
@@ -57,7 +57,7 @@ footer{
 }
 
 header{
-    padding-left: 75px;
+
 }
 
 h1{
@@ -86,6 +86,15 @@ h1{
 .URL{
     padding-left: 8px;
     padding-right: 8px;
+    object-fit: cover;
+    width: 250px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.rev{
+    padding-right: 8px;
+    filter: saturate(0%);
     object-fit: cover;
     width: 250px;
     height: 300px;
