--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@ body{
 }
 
 header{
+    z-index: 2;
     display: flex;
-    flex-direction: column;
+    justify-content: right;
 }
 
 nav{
+    z-index: 3;
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -24,15 +26,9 @@ nav{
     color: white;
 }
 
-ul{
-
-}
-.nav{
-    
-}
-
 .menu{
     font-size: 40px;
+    border-bottom: 8px solid white;
 }
 
 a{
@@ -51,16 +47,15 @@ footer{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-end;
-    justify-content: space-between;
+    padding-left: 130px;
+    justify-content:space-evenly;
     background-color:#a6a6a6;
     font-size: 14px;
-}
-
-header{
-
+    padding-bottom: 15px;
 }
 
 h1{
+    padding-right: 180px;
     background-color:#86FFA8;
     font-size: 80px;
     font-family: "Questrial", sans-serif;
@@ -81,6 +76,7 @@ h1{
     width: 250px;
     height: 300px;
     overflow: hidden;
+    transition: 1s;
 }
 
 .URL{
@@ -90,6 +86,7 @@ h1{
     width: 250px;
     height: 300px;
     overflow: hidden;
+    transition: 1s;
 }
 
 .rev{
@@ -99,6 +96,7 @@ h1{
     width: 250px;
     height: 300px;
     overflow: hidden;
+    transition: 1s;
 }
 
 .him{
@@ -107,6 +105,7 @@ h1{
     width: 450px;
     height: 300px;
     overflow: hidden;
+    transition: 1s;
 }
 
 .co{
@@ -114,6 +113,8 @@ h1{
 }
 
 nav a:hover{
+    background-color: black;
+    width: 120%;
     color: red;
     transition: ease (4s);
 }
@@ -129,4 +130,165 @@ nav a:hover{
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
+}
+
+main div {
+    position: relative;
+    left: 500px;
+    top: 200px;
+}
+
+.jen:hover{
+    filter: saturate(110%);
+    transform: scale(120%);
+    transition: 1s;
+}
+
+.URL:hover{
+    filter: saturate(110%);
+    transform: scale(120%);
+    transition: 1s;
+}
+
+.rev:hover{
+    filter: saturate(110%);
+    transform: scale(120%);
+    transition: 1s;
+}
+
+.him:hover{
+    filter: saturate(110%);
+    transform: scale(120%);
+    transition: 1s;
+}
+
+@media only screen and (max-width:600px){
+    h1{
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        z-index: 3;
+        font-size: 50px;
+        position: fixed;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100px;
+    }
+    body{
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+    }
+    .pics{
+        padding-top: 200px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    div section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .jen{
+        padding-right: 2px;
+        filter: saturate(0%);
+        object-fit: cover;
+        width: 185px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    
+    .URL{
+        padding-left: 2px;
+        padding-right: 2px;
+        object-fit: cover;
+        width: 185px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    
+    .rev{
+        padding-right: 2px;
+        filter: saturate(0%);
+        object-fit: cover;
+        width: 185px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    
+    .him{
+        padding-left: 2px;
+        object-fit: cover;
+        width: 185px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    .jen:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    
+    .URL:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    
+    .rev:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    
+    .him:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+
+    footer{
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        width: 100%;
+        height: 70px;
+        font-size: 10px;
+    }
+    nav{
+        position: fixed;
+        top: 100px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-around;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 50px;
+    }
+    ul{
+        display: flex;
+        flex-direction: row;
+        justify-items: space-between;
+    }
+    li{
+        display: flex;
+    }
+    section{
+        margin: 0;
+        padding: 0;
+        font-size: 20px;
+    }
+    .menu{
+        display: none;
+    }
+
 }
