--- a/about/styles.css
+++ b/about/styles.css
@@ -10,6 +10,8 @@ header{
     z-index: 2;
     display: flex;
     justify-content: right;
+    position: fixed; 
+    padding-left:418px;
 }
 
 nav{
@@ -166,10 +168,31 @@ main div {
     padding-right: 380px;
 }
 
+div{
+    display: flex;
+    justify-content:space-evenly; 
+    padding-top:150px;
+}
+.about{
+    width: 300px; 
+    position:fixed; 
+    top: 200px; 
+    left: 420px;
+    font-size: 20px;
+}
+img{
+    height:543px;position: fixed; 
+    left: 800px; 
+    top: 150px;
+}
 @media only screen and (max-width:600px){
     header{
         display: flex;
-        justify-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 150px;
     }
     
     h1{
@@ -286,13 +309,11 @@ main div {
     }
     ul{
         display: flex;
-        flex-direction: row;
         width: 100%;
-        justify-content:space-around;
+        flex-direction: row;
+        justify-content:space-between;
     }
-    li{
-        display: flex;
-    }
+
     section{
         margin: 0;
         padding: 0;
@@ -304,6 +325,24 @@ main div {
     p{
         padding: 0;
         margin: 0;
+    }
+    .about{
+        z-index: 3;
+        padding: 0;
+        margin: 0;
+        font-size: 20px;
+        top: 330px;
+        left: 0;
+        color: #18923a;
+    }
+    li{
+        display: flex;
+    }
+    img{
+        padding: 0;
+        margin: 0;
+        top: 300px;
+        left: 0px;
     }
 
 }
