--- a/Work/styles.css
+++ b/Work/styles.css
@@ -8,7 +8,59 @@ main section{
     left: 500px;
     top: 200px;
 }
-
+.jentext{
+    width: 610px;
+    font-size: 20px;
+    padding-right: 15px;
+}
+.jennifer-in-paradise{
+    display: flex;
+    width:600px;
+    position: relative;
+}
+.jenmain{
+    display: flex; 
+    position: fixed;
+}
+.URLtitle{
+    position: fixed; 
+    justify-content: right; 
+    padding-left:490px; 
+    font-size:67.5px;
+}
+.URLmain{
+    display: flex; 
+    position: fixed;
+}
+.URLtext{
+    width: 350px;
+    font-size: 18px; 
+    padding-right: 15px;
+}
+.URLpic{
+    width:600px;
+    position: fixed;
+}
+.revtitle{
+    position: fixed;
+    justify-content: right; 
+    padding-left:490px; 
+    font-size: 60px;
+}
+.revmain{
+    display: flex;
+    position: fixed;
+}
+.revtext{
+    width: 300px;
+    font-size: 16px; 
+    padding-right: 15px;
+}
+.revpic{
+    width:600px;
+    position: fixed;
+    padding-right: 100px;
+}
 @media only screen and (max-width:600px){
     header{
         display: flex;
@@ -160,5 +212,68 @@ main section{
         top: 300px;
         left: 0px;
     }
-
+    main section{
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+    main div{
+        position: relative;
+        left: 0px;
+        top: 0px;
+    }
+    .jentext{
+        padding-top: 600px;
+        width: 100%;
+        left: 0px;
+        top: 0px;
+    }
+    .jennifer-in-paradise{
+        width:400px;
+        position: fixed;
+    }
+    .URLtitle{
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        z-index: 3;
+        font-size: 50px;
+        position: fixed;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100px;
+    }
+    .URLpic{
+        width: 400px;
+        position: fixed;
+    }
+    .URLtext{
+        padding-top: 600px;
+        width: 100%;
+        left: 0px;
+        top: 0px;
+    }
+    .revtitle{
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        z-index: 3;
+        font-size: 50px;
+        position: fixed;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100px;
+    }
+    .revpic{
+        width: 400px;
+        position: fixed;
+    }
+    .revtext{
+        padding-top: 600px;
+        width: 100%;
+        left: 0px;
+        top: 0px;
+    }
 }
