--- a/about/styles.css
+++ b/about/styles.css
@@ -185,6 +185,167 @@ img{
     left: 800px; 
     top: 150px;
 }
+
+@media only screen and (min-width:600px) and (max-width:1000px){
+    header{
+        display: flex;
+        position: relative;
+        justify-items: flex-end;
+    }
+    .about{
+        margin: 0;
+        padding: 0;
+        left: 200px;
+        top: 200px;
+    }
+    h1{
+        display: flex;
+        align-items: center;
+        z-index: 3;
+        font-size: 50px;
+        position: fixed;
+        margin: 0;
+        padding: 0;
+        padding-top: 10px;
+        padding-left: 20px;
+        width: 70%;
+    }
+    body{
+        margin: 0;
+        padding: 0;
+        flex-direction: column;
+        background-image: url(../images/constantheadshot.jpeg);
+    }
+    .pics{
+        padding-top: 128px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    div section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .jen{
+        padding-right: 10px;
+        filter: saturate(0%);
+        object-fit: cover;
+        width: 200px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    .URL{
+        padding-left: 2px;
+        padding-right: 2px;
+        object-fit: cover;
+        width: 200px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    .rev{
+        padding-right: 2px;
+        filter: saturate(0%);
+        object-fit: cover;
+        width: 200px;
+        height: 225px;
+        overflow: hidden;
+        transition: 1s;
+    }
+    .him{
+        padding-left: 2px;
+        object-fit: cover;
+        width: 415px;
+        height: 275px;
+        overflow: hidden;
+        padding-top: 10px;
+        transition: 1s;
+    }
+    .jen:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    .URL:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    .rev:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    .him:hover{
+        filter: saturate(110%);
+        transform: scale(120%);
+        transition: 1s;
+    }
+    footer{
+        display: flex;
+        justify-content:center;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        width: 100%;
+        height: 80px;
+        font-size: 10px;
+        padding-left: 90px;
+    }
+    footer div{
+        padding-left: 10px;
+    }
+    nav{
+        z-index: 3;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        width: 175px;
+        height: 100%;
+        font-size: 24px;
+        background-color: black;
+        color: white;
+    }
+    ul{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+    }
+    li{
+        display: flex;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        padding-right: 10px;
+    }
+    section{
+        margin: 0;
+        padding: 0;
+        font-size: 20px;
+    }
+    .menu{
+        padding-top: 30px;
+        padding-bottom: 20px;
+    }
+    p{
+        padding: 0;
+        margin: 0;
+    }
+    .aartist{
+        font-size: 30px;
+        padding-top: 0px;
+        margin: 10px;
+        padding: 0;
+    }
+    section img{
+        display: none;
+    }
+}
+
 @media only screen and (max-width:600px){
     header{
         display: flex;
@@ -212,6 +373,7 @@ img{
         padding: 0;
         display: flex;
         flex-direction: column;
+        background-image:none;
     }
     .pics{
         padding-top: 200px;
@@ -299,7 +461,6 @@ img{
         position: fixed;
         top: 100px;
         display: flex;
-        flex-wrap: wrap;
         justify-content:space-around;
         align-items: center;
         margin: 0;
@@ -341,7 +502,7 @@ img{
     img{
         padding: 0;
         margin: 0;
-        top: 300px;
+        top: 200px;
         left: 0px;
     }
     .navi{
